change (almost) all coloring to kyori adventure