@@ -1,13 +1,12 @@
 package me.justeli.coins.util;
 
-import com.google.gson.JsonElement;
-import com.google.gson.JsonObject;
 import com.google.gson.JsonParser;
 import me.justeli.coins.Coins;
 import me.justeli.coins.config.Config;
 
 import java.io.InputStream;
 import java.io.InputStreamReader;
+import java.net.URI;
 import java.net.URL;
 import java.net.URLConnection;
 import java.util.Date;
@@ -18,14 +17,26 @@ import java.util.logging.Level;
  * @author Eli
  * @since February 04, 2022 (creation)
  */
-public final class PluginVersionUtil {
+public final class VersionCheck {
     private final Coins coins;
-    public PluginVersionUtil(Coins coins) {
+    private final String pluginVersion;
+
+    public VersionCheck(Coins coins) {
         this.coins = coins;
+        if (VersionUtil.isPlatformAtLeast(VersionUtil.Platform.PAPER)) {
+            this.pluginVersion = coins.getPluginMeta().getVersion();
+        }
+        else {
+            this.pluginVersion = coins.getDescription().getVersion();
+        }
+    }
+
+    public String getPluginVersion() {
+        return pluginVersion;
     }
 
     public void checkVersion() {
-        Optional<PluginVersion> version = retrieveLatestVersion("JustEli/Coins");
+        Optional<VersionPlugin> version = retrieveLatestVersion("JustEli/Coins");
         if (version.isEmpty()) {
             return;
         }
@@ -35,29 +46,26 @@ public final class PluginVersionUtil {
             return;
         }
 
-        String currentVersion = coins.getDescription().getVersion();
-        if (!currentVersion.equals(latestVersion.tag()) && !latestVersion.preRelease()) {
+        if (!pluginVersion.equals(latestVersion.getTag()) && !latestVersion.isPreRelease()) {
             coins.line(Level.WARNING);
-            coins.console(Level.WARNING, "  Detected an outdated version of Coins (%s is installed).".formatted(
-                currentVersion
-            ));
+            coins.console(Level.WARNING, "  Detected an outdated version of Coins (%s is installed).".formatted(pluginVersion));
             coins.console(Level.WARNING, "  The latest version is %s, released on %s.".formatted(
-                latestVersion.tag(),
-                Util.DATE_FORMAT.format(new Date(latestVersion.time()))
+                latestVersion.getTag(),
+                Util.formatDate(latestVersion.getTime())
             ));
             coins.console(Level.WARNING, "  Download: %s".formatted(coins.getDescription().getWebsite()));
             coins.line(Level.WARNING);
         }
     }
 
-    private PluginVersion latestVersion;
-    public Optional<PluginVersion> getLatestVersion() {
+    private VersionPlugin latestVersion;
+    public Optional<VersionPlugin> getLatestVersion() {
         return Optional.ofNullable(latestVersion);
     }
 
-    public static Optional<PluginVersion> retrieveLatestVersion(String repository) {
+    public static Optional<VersionPlugin> retrieveLatestVersion(String repository) {
         try {
-            URL url = new URL("https://api.github.com/repos/" + repository + "/releases/latest");
+            URL url = URI.create("https://api.github.com/repos/" + repository + "/releases/latest").toURL();
             URLConnection request = url.openConnection();
 
             request.setReadTimeout(1000);
@@ -65,9 +73,9 @@ public final class PluginVersionUtil {
             request.connect();
 
             try (var reader = new InputStreamReader((InputStream) request.getContent())) {
-                JsonElement root = JsonParser.parseReader(reader);
-                JsonObject jsonObject = root.getAsJsonObject();
-                return Optional.of(new PluginVersion(
+                var root = JsonParser.parseReader(reader);
+                var jsonObject = root.getAsJsonObject();
+                return Optional.of(new VersionPlugin(
                     jsonObject.get("tag_name").getAsString(),
                     jsonObject.get("prerelease").getAsBoolean(),
                     jsonObject.get("name").getAsString(),
